<resources>
    <string name="app_name">Family_safety</string>
    <string name="sos">SOS</string>
    <string name="sos_text">In case of emergency, Keep telling family members to contact me.</string>
    <string name="todo">TODO</string>
    <string name="guard">GUARD</string>
    <string name="guard_text">Open when you are on a potentially dangerous journey.</string>
    <string name="Home">Home</string>
    <string name="profile">Profile</string>
    <string name="ic_guard">Guard</string>
    <string name="ic_dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_family">My Family</string>
</resources>